# Building-Tokenized-Real-Estate-Engine-

./: .gitignore  ARCH.md  Dockerfile  README.md  bootstrap.ps1  bootstrap.sh  render.yaml  start.sh
backend/: Cargo.toml
backend/src/: config.rs  error.rs  main.rs
backend/src/db/: mod.rs  models.rs  queries.rs
backend/src/middleware/: auth.rs
backend/src/routes/: admin.rs  mod.rs  search.rs
backend/src/search/: documents.rs  index.rs  mod.rs
frontend/: analysis_options.yaml  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/models/: search_result.dart
frontend/lib/screens/: results_screen.dart  search_screen.dart
frontend/lib/services/: api_service.dart
frontend/lib/theme/: app_theme.dart
frontend/web/: index.html
scripts/: migrate.sql  seed.sql
