[package]
name = "tokenized-real-estate-backend"
version = "0.1.0"
edition = "2021"
description = "Tokenized Real Estate Search & Ingestion Engine — Rust/axum backend"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = "0.5"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Search
meilisearch-sdk = "0.27"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# OpenAPI & Swagger UI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
